Changes: * Fixed issue regarding lot_content and hdd_order table distortions when changing window sizes.

--- a/website/templates/static/index.css
+++ b/website/templates/static/index.css
@@ -128,7 +128,7 @@ background: transparent;
 }
 
 .block {
-  display: inline-block;
+  display: block;
 }
 
 .textbox {
@@ -469,7 +469,7 @@ background: transparent;
 }
 
 .textdiv {
-	float: left;
+	display: inline;
 	margin: 10px;
 }
 
